Completed UI version of the game

--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8">
   <title>Title</title>
 </head>
 <body>
+  <div class="header">
+    <h1>Rock, Paper, Scissors</h1>
+  </div>
+  <div class="buttons">
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+  </div>
+
+
+  <div class="results">
+    <span id="round-result"></span>
+    <span id="player-score">Player score:
+      <span></span>
+    </span>
+    <span id="computer-score">Computer score:
+      <span></span>
+    </span>
+    <span id="final-score"></span>
+  </div>
 <script src="app.js"></script>
 </body>
 </html>
